# lineups

./: README.org  lineup_generator.py  pyproject.toml
lineups/: fairness_generator.py  multi_objective_generator.py
tests/: dummy_roster.csv  test_lineup_generator.py
