[project]
name = "lineups"
version = "0.1.0"
description = ""
authors = [
    {name = "Ishai",email = "ishai1@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "pulp (>=3.2.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.13.0"
pytest = "^8.4.2"


[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

